Simplify + fix radar jamming / visibility

--- a/css/aa.css
+++ b/css/aa.css
@@ -861,19 +861,8 @@ ul.stats-bar .bombs em {
 	position: relative;
 }
 
-#game-status-bar #radar .jammed-overlay {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 102.5%;
-	background: #000;
+#game-status-bar #radar.jammed {
 	visibility: hidden;
-	z-index: 5;
-}
-
-#game-status-bar #radar.jammed .jammed-overlay {
-	visibility: visible;
 }
 
 #game-status-bar #radar .sprite {
